# benchmyride

./: .gitignore  README.md
.github/workflows/: bench.yml
algorithms/fibonacci-iter/: main.py  main.ts
algorithms/fibonacci-rec/: Program.cs  build.zig  fibo.csproj  main.dart  main.go  main.py  main.rs  main.ts  main2.zig
algorithms/json-serde/: Cargo.toml  Program.cs  json.csproj  main.dart  main.go  main.js  main.mjs  main.py  main.ts  main_bun.ts  pubspec.yaml
algorithms/merge-sort/: main.mjs  main.ts  main_bun.ts
algorithms/native-sort/: Cargo.toml  Program.cs  main.dart  main.go  main.mjs  main.py  main.ts  main_bun.ts  main_rust.rs  sort.csproj
algorithms/native-sort/.dart_tool/: package_config.json
algorithms/regex/: Cargo.toml  Program.cs  main.dart  main.go  main.mjs  main.py  main_bun.mjs  main_deno.mjs  regex.csproj
algorithms/regex/src/: main.rs
