[package]
name = "json-serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
md5 = "0.7.0"
serde = "1.0.193"
serde_json = {version = "1", features = ["float_roundtrip", "preserve_order"]}

[[bin]]
name = "json-serde"
path = "main_rust.rs"
